Picture-in-Picture: Close() when the window is already closed should be a no-op.

Bug: 848107
Change-Id: I8ca426ee3393a40071c564c6e58564167f6df935
Reviewed-on: https://chromium-review.googlesource.com/1080464
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563431}