content/browser/picture_in_picture/picture_in_picture_window_controller_impl.cc
@@ -77,6 +77,9 @@ gfx::Size PictureInPictureWindowControllerImpl::Show() {
 void PictureInPictureWindowControllerImpl::Close() {
   DCHECK(window_);
 
+  if (!window_->IsVisible())
+    return;
+
   window_->Hide();
   initiator_->SetHasPictureInPictureVideo(false);
 
